# vllm-hust-dev-hub

./: .gitignore  README.md  ascend-bench-after-quickstart.txt  env-verify-after-quickstart.txt  vllm-hust-dev-hub.code-workspace
.github/agents/: vllm-hust-localization.agent.md
.github/workflows/: quickstart-ci.yml
Ascend-Machine/: HARDWARE_REPORT_20260407.md
Ascend-Machine/benchmarks/: run_bandwidth_benchmarks.sh
Ascend-Machine/results/: latest
Ascend-Machine/results/20260412_091136/: free-h.txt  local-ddr-node0.memcpy.txt  npu-smi-info.txt  numactl-H.txt  same-socket-remote-node1.memcpy.txt
Ascend-Machine/results/hccl_fix_probe_20260412/: acl-copy-all8-h2d.txt  acl-copy-dual-h2d.txt  acl-copy-single-d2h.txt  free-h.txt  (+13 more)
ascend-runtime-manager/: README.md  pyproject.toml
ascend-runtime-manager/.github/workflows/: publish-pypi.yml
ascend-runtime-manager/manifests/: euleros-910b.json
ascend-runtime-manager/scripts/: publish_pypi.sh
ascend-runtime-manager/src/hust_ascend_manager/: cli.py  container.py  doctor.py  launch.py  runtime.py  setup.py
ascend-runtime-manager/tests/: test_container.py  test_doctor.py  test_launch.py  test_runtime.py  test_setup.py
docs/: leaderboard-implementation.md  team-onboarding.md  train8-container-quickstart.md  train8-user8-container-repair-20260502.md  website-goal-baseline-handoff-20260506.md
scripts/: ascend-container-runtime.sh  ascend-official-container.sh  clone-workspace-repos.sh  enable-existing-container-ssh.sh  install-miniconda.sh  offline-sync-instance.sh  quickstart.sh
scripts/ci/: quickstart_ci.sh
(+63 files in other folders)
