[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hust-ascend-manager"
version = "0.1.0"
description = "Ascend runtime doctor/setup manager for vllm-hust deployments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "IntelliStream"}]
dependencies = []

[project.scripts]
hust-ascend-manager = "hust_ascend_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
